# plusendi

./: .editorconfig  .gitattributes  Cargo.toml  bytes.raw
samples/: packet1.raw  packet2.raw  packet3.raw  winlink.txt  winlink2.raw
src/: crc16.rs  fbb.rs  lib.rs  lzhuf.rs  main.rs  modem.rs  parser.rs  rig.rs  types.rs
src/modem/: parser_iterator.rs  vara.rs
src/rig/: elecraft.rs
src/rig/elecraft/: kx3.rs
