[package]
name = "plusendi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri_braid = "*"
bytes = "*"
color-eyre = "*"
dotenv = "*"
lazy-regex = "*"
nom = "7.1"
regex = "*"
serialport = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-error = "*"
tracing-subscriber = "*"
#tui = "*"
